Try to fix build.gradle for Java 11