@@ -177,7 +177,8 @@ macAppBundle {
 if (project.hasProperty('headless') ? project.headless : false) {
     println "Running UI Tests Headless"
     test {
-        jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED', '-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k']
+    	if()
+        jvmArgs = ['-Djava.awt.headless=true', '-Dtestfx.robot=glass', '-Dtestfx.headless=true', '-Dprism.order=sw', '-Dprism.text=t2k', '-Dglass.gtk.uiScale=2.0']
     }
 }
 test {
